k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ops-weather-api
  namespace: ops-weather
spec:
  type: ClusterIP
  selector:
    app: ops-weather-api
  ports:
    - name: http
      port: 80
      targetPort: http
